# tekosu

./: README.md  app.py  pyproject.toml
.streamlit/: config.toml
