[tool.poetry]
name = "tekosu"
version = "0.1.0"
description = ""
authors = ["Samvel Davtyan <samvelxdavtyan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.25.0"
openai = "^0.27.8"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.format]
indent-string = "  "
